--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
 <script>
   // Sends event to client
-  vkBridge.send(“VKWebAppInit");
+ vkBridge.send('VKWebAppInit');
 </script>  
 
 <script src="howler.core.js"></script>
